WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191230
RealtimeOutgoingAudioSource should use DestructionThread::Main
https://bugs.webkit.org/show_bug.cgi?id=191230
Summary
RealtimeOutgoingAudioSource should use DestructionThread::Main
youenn fablet
Reported
2018-11-03 19:09:18 PDT
imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-setRemoteDescription-replaceTrack.https.html shows the issue.
Attachments
Patch
(2.23 KB, patch)
2018-11-03 19:10 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-11-03 19:10:45 PDT
Created
attachment 353790
[details]
Patch
WebKit Commit Bot
Comment 2
2018-11-04 07:30:39 PST
Comment on
attachment 353790
[details]
Patch Clearing flags on attachment: 353790 Committed
r237781
: <
https://trac.webkit.org/changeset/237781
>
WebKit Commit Bot
Comment 3
2018-11-04 07:30:41 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-11-04 07:32:25 PST
<
rdar://problem/45791764
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug